# pre-legal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: pyproject.toml
backend/src/prelegal_backend/: auth.py  chat.py  chat_engine.py  db.py  documents_router.py  llm_client.py  main.py  nda_chat.py  routing.py  schemas.py  security.py  sessions.py
backend/src/prelegal_backend/documents/: design_partner_agreement.py  mutual_nda.py  pilot_agreement.py  registry.py  render.py  types.py
backend/tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_chat_engine.py  test_design_partner_agreement.py  test_documents_crud.py  test_documents_endpoint.py  test_documents_types.py  test_llm_client.py  test_mutual_nda.py  test_nda_chat.py  test_pilot_agreement.py  test_render.py  test_routing.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.test.tsx  page.tsx
frontend/src/components/: Chat.test.tsx  Chat.tsx  DisclaimerBanner.tsx  DownloadGenericPdfButton.tsx  DownloadPdfButton.tsx  GenericDocument.test.tsx  GenericDocument.tsx  GenericPdfDocument.tsx  Header.tsx  NdaChat.test.tsx  NdaChat.tsx  NdaDocument.tsx  NdaForm.tsx  NdaPdfDocument.tsx
frontend/src/hooks/: useAuth.tsx  useChat.test.ts  useChat.ts  useNdaChat.test.ts  useNdaChat.ts  useRequireAuth.ts
frontend/src/lib/: auth-client.test.ts  auth-client.ts  chat-client.test.ts  chat-client.ts  chat-types.ts  document-client.ts  (+12 more)
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE  templates.json
(+5 files in other folders)
